# dwiz

./: .gitignore  Makefile  README.md  genie.yaml  pyproject.toml  wizard.yaml
.github/workflows/: ci.yml  deploy_dev.yml  deploy_prod.yml
cli/: aws_preflight.py  genie.py  wizard.py
dags/templates/: batch_api_ingest.py  stream_compaction.py
data_platform_genie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: MONITORING_DASHBOARD.md  SECRETS_MANAGEMENT.md  SECRETS_QUICKSTART.md
jobs/: Dockerfile  runner.py
libs/jobs/: __init__.py  compaction.py
libs/python_common/: metrics.py  secrets.py
pipelines/sources/: example.yaml
pipelines/streams/: example.yaml
scripts/: build_and_push.sh  deploy_dags.sh  ensure_backend.sh  policy_check.py  smoke_test.sh  validate_dags.py
terraform/envs/dev/: backend.tf  main.tf  variables.tf
terraform/envs/prod/: backend.tf  main.tf  variables.tf
terraform/modules/dashboard/: main.tf  variables.tf
terraform/modules/ecs_jobs/: main.tf
terraform/modules/iam/: main.tf  variables.tf
terraform/modules/kinesis_firehose/: main.tf  variables.tf
terraform/modules/mwaa/: main.tf  variables.tf
terraform/modules/network/: main.tf  variables.tf
terraform/modules/observability/: main.tf  variables.tf
terraform/modules/s3_lake/: main.tf  variables.tf
terraform/modules/secrets_manager/: main.tf  variables.tf
tests/: test_aws_preflight.py  test_billing.py  test_cli.py  test_compaction.py  test_dashboard.py  test_secrets.py
