[project]
name = "data-platform-genie"
version = "0.1.0"
description = "Data Platform Genie v1"
requires-python = ">=3.11"
dependencies = [
  "PyYAML==6.0.1",
]

[project.scripts]
genie = "cli.genie:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli", "libs", "libs.*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
